tests/paczka1/fuzzy1/70002649.err
Error in line 11: PdAiAVJITk A358 81,6
Error in line 13: dSr A349 2,0
Error in line 26: PdAiAVJITk A349 62,7
Error in line 33: pGse7iZk9 S699 27,5
Error in line 39: wl3HkT S699 154,36
